--- a/selectTwo/css/jquery.selectTwo.css
+++ b/selectTwo/css/jquery.selectTwo.css
@@ -60,7 +60,13 @@
     outline: 0;
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6) !important;
 }
+.select2-container--default .select2-results__option--highlighted[aria-selected] {
+    color: #fff !important;
+}
 
+.select2-container--default .select2-results__option.custom-class {
+    color: #f00;
+}
 .select2-container .select2-selection--single .select2-selection__clear {
     font-size: 14px;
     color: #999;
